--- a/plugins/library-check-backend/package.json
+++ b/plugins/library-check-backend/package.json
@@ -57,6 +57,7 @@
     "express": "^4.18.1",
     "express-promise-router": "^4.1.0",
     "git-url-parse": "^11.4.4",
+    "gradle-to-js": "^2.0.1",
     "knex": "^3.0.0",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.7",
