--- a/plugins/library-check-backend/package.json
+++ b/plugins/library-check-backend/package.json
@@ -47,6 +47,7 @@
     "@backstage/backend-test-utils": "^0.3.3",
     "@backstage/catalog-model": "^1.4.4",
     "@backstage/config": "^1.1.1",
+    "@backstage/errors": "^1.2.4",
     "@backstage/integration": "^1.9.0",
     "@backstage/plugin-catalog-common": "^1.0.21",
     "@backstage/plugin-catalog-node": "^1.7.2",
