--- a/plugins/library-check-backend/package.json
+++ b/plugins/library-check-backend/package.json
@@ -63,6 +63,8 @@
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.7",
     "p-limit": "^3.0.2",
+    "pip-requirements-js": "^0.2.1",
+    "semver": "^7.6.0",
     "uuid": "^9.0.1",
     "winston": "^3.2.1",
     "xml2js": "^0.6.2",
