--- a/plugins/library-check-backend/package.json
+++ b/plugins/library-check-backend/package.json
@@ -72,6 +72,7 @@
   },
   "devDependencies": {
     "@backstage/cli": "^0.25.2",
+    "@types/lodash": "^4.17.0",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.0",
     "msw": "^0.49.0",
