feat(plugin): fix app-config.yaml
Signed-off-by: Anna  Carolina <8171749+accezar@users.noreply.github.com>

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -50,7 +50,7 @@ integrations:
   github:
     - host: github.com
       apps:
-        - $include: github-app-backstage-plugin-app-test-credentials.yaml
+        - $include: 
     ### Example for how to add your GitHub Enterprise instance using the API:
     # - host: ghe.example.net
     #   apiBaseUrl: https://ghe.example.net/api/v3
